--- a/FrontEnd/src/app/Layout/layout-side/layout-side.component.css
+++ b/FrontEnd/src/app/Layout/layout-side/layout-side.component.css
@@ -42,9 +42,6 @@ mat-icon {
 
 .box:hover {
   background-color: var(--bg-hover);
-}
-
-.box:hover {
   color: var(--primary);
 }
 
